turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:18: error: ')' expected but '<-' found.
	while  (x <- colors.length) {
                  ^LangtonsAnt:27: error: illegal start of simple expression
}
^