turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def marqueSol(c:Color) { 
		setCouleurBrosse(c);
		baisseBrosse();
		leveBrosse()
}
		
def tourne(rule:Char) {
	if (rule == 'L') { gauche() }
	else if ( rule == 'R') { droite() }
	else {}
}


def step(rule:Array[Char], colors:Array[Color]) {
	var x = 0
	
	while  (x <- colors.length) {
		if ( colors(x) == getCouleurSol()) {
		tourne(rule(x))
		marqueSol(colors((x+1)%colors.length))
		avance()
		}
		else {}
		x=x+1
	}
}

